Fix issue with bg not covering everything

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 @layer base {
@@ -75,19 +82,19 @@ body {
 
 .bkg__spotlight {
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   width: 100%;
   background: radial-gradient(75% 35% at 50% 50%, rgba(46, 47, 56, 0.6) 20%, rgba(53, 55, 66, 0) 90%), 
               linear-gradient(rgba(19, 24, 34, 0) 0%, rgb(2, 2, 4) 80%);
   z-index: 2;
-  opacity: 30%;
+  opacity: 40%;
 
 &:before {
   content: "";
   width: 100%;
   height: 100%;
   z-index: 1;
-  position: absolute;
+  position: fixed;
   top: 0; 
   left: 0;
   bottom: 0;
@@ -101,7 +108,7 @@ body {
 @media (min-width: 768px) {
 .bkg__spotlight {
   pointer-events: none;
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	background: radial-gradient(75% 35% at 50% 95%, rgba(46, 47, 56, 0.6) 20%, rgba(53, 55, 66, 0) 90%),
 					linear-gradient(rgba(19, 24, 34, 0) 0%, rgb(2, 2, 4) 80%);
@@ -113,7 +120,7 @@ body {
 		width: 100%;
 		height: 100%;
 		z-index: 2;
-		position: absolute;
+		position: fixed;
 		top: 0; 
 		left: 0;
 		bottom: 0;
